--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,25 +1,61 @@
 *{
     margin: 0;
 }
+
+/* header and navigration styles  */
 .nav-title{
     font-weight: 800;
     font-size: 45px;
     margin-top: -56px;
 }
+.logo{
+    font-size: 100px;
+    color: #FD6E0A;
+    font-family: 'Courier New', Courier, monospace;
+}
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 230px;
+    margin: 50px 200px;
 }
 nav ul{
     display: flex;
+    align-items: center;
 }
 nav li{
     list-style: none;
     margin-left: 50px;
 }
-.logo-style{
-    font-size: 100px;
-    color: #FD6E0A;
-    font-family: 'Courier New', Courier, monospace;
+.btn-primary{
+    font-size: 20px;
+    color: rgb(239, 239, 239);
+    background-color: #FD6E0A;
+    padding: 18px 35px;
+    border-radius: 5px;
+    border: none;
+
+}
+
+/* banner section   */
+
+.banner{
+    display: flex;
+    align-items: center;
+    margin: 0 200px;
+}
+
+.banner-sub-title{
+    font-size: 45px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+.banner-title{
+    font-weight: 700;
+    font-size: 70px;
+    margin-bottom: 20px;
+}
+.banner-discription{
+    color: #757575;
+    font-size: 18px;
+    margin-bottom: 20px;
 }
