--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -3,13 +3,20 @@
 }
 
 /* header and navigration styles  */
+.header
+{
+    background-image: url('../images/header_bg.png') , url('../images/developer.png');
+    background-repeat: no-repeat;
+    background-position: bottom right , left;
+    /* background-color: orange; */
+    
+}
 .nav-title{
     font-weight: 800;
     font-size: 45px;
-    margin-top: -56px;
 }
 .logo{
-    font-size: 100px;
+  
     color: #FD6E0A;
     font-family: 'Courier New', Courier, monospace;
 }
@@ -17,6 +24,8 @@ nav{
     display: flex;
     justify-content: space-between;
     margin: 50px 200px;
+     
+    /* margin: 50px 200px; */
 }
 nav ul{
     display: flex;
@@ -58,4 +67,43 @@ nav li{
     color: #757575;
     font-size: 18px;
     margin-bottom: 20px;
+}
+
+
+/* main section  */
+main{
+    max-width: 1140px;
+    margin: 0 auto;
+}
+
+/* about-section  */
+.about-section{
+    margin-top: 130px;
+    padding: 130px 150px;
+    background-color: #fff8f3;
+    border-radius: 10px;
+    text-align: center;
+}
+.section-title{
+    margin-bottom: 30px;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    margin-bottom: 30px;
+}
+
+/* about-info-container */
+.about-info-container{
+    display: flex;
+    justify-content: space-around;
+}
+.info-title{
+    font-size: 20px;
+    color: #757575;
+}
+.info-description{
+    font-weight: 700;
+    font-size: 20px;
+    color: #474747;
 }
