--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -2,6 +2,14 @@
     margin: 0;
 }
 
+.section-title{
+    font-size: 20px;
+    color: #474747;
+    margin: 20px 0;
+    font-weight: 700;
+    margin: 130px;
+    text-align: center;
+}
 /* header and navigration styles  */
 .header
 {
@@ -79,13 +87,15 @@ main{
 /* about-section  */
 .about-section{
     margin-top: 130px;
-    padding: 130px 150px;
+    padding: 100px 150px;
     background-color: #fff8f3;
     border-radius: 10px;
     text-align: center;
 }
-.section-title{
-    margin-bottom: 30px;
+.about-section-title{
+    font-size: 40px;
+    color: #474747;
+    margin: 20px 0;
 }
 .section-description{
     font-size: 18px;
@@ -107,3 +117,38 @@ main{
     font-size: 20px;
     color: #474747;
 }
+
+/* what-i-do */
+.what-i-do{
+    margin: 130px;
+    text-align: center;
+}
+
+/* skills-container  */
+.skills-container{
+    display: flex;
+    margin: 0 10PX;
+}
+.skill{
+    background-color: #FFFFFF;
+    margin: 0 10px;
+    padding: 15px;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.077);
+    border-radius: 5px;
+    height: 250px;
+    /* margin-bottom: 50px; */
+}
+.skill-title{
+    font-size: 20px;
+    color: #474747;
+    margin: 20px 0;
+    font-weight: 700;
+}
+.skill-descriptyion{
+    font-size: 18px;
+    color: #757575;
+}
+
+
+/* resume  */
+
