--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -10,6 +10,21 @@
     margin: 130px;
     text-align: center;
 }
+.btn-primary{
+    color: rgb(239, 239, 239);
+    background-color: #FD6E0A;
+    padding: 18px 35px;
+    border-radius: 5px;
+    border: none;
+    font-size: 20px;
+}
+.btn-secondery{
+    font-size: 20px;
+    background-color: #FFFFFF;
+    border: 2px solid #FD6E0A;
+    padding: 16px 35px;
+    border-radius: 5px;
+}
 /* header and navigration styles  */
 .header
 {
@@ -43,15 +58,7 @@ nav li{
     list-style: none;
     margin-left: 50px;
 }
-.btn-primary{
-    font-size: 20px;
-    color: rgb(239, 239, 239);
-    background-color: #FD6E0A;
-    padding: 18px 35px;
-    border-radius: 5px;
-    border: none;
 
-}
 
 /* banner section   */
 
